--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "disposer-util",
-  "version": "1.0.0",
+  "name": "mobx-disposer-util",
+  "version": "0.0.5",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "git://github.com/js2me/disposer-util"
   },
-  "keywords": ["utils", "disposer"],
+  "keywords": ["mobx", "mobx-utils", "disposer"],
   "author": "js2me",
   "license": "MIT",
   "description": "",
