--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "disposer-util",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "prebuild": "eslint . --fix",
+    "clean": "rimraf dist",
+
+    "prebuild": "npm run clean && eslint . --fix",
     "build": "tsc",
-    "prepublish": "pnpm run build"
+    "postbuild": "node ./post-build.mjs",
+    "prepub": "pnpm run build",
+    "pub": "cd dist && npm publish",
+    "postpub": "npm run clean"
   },
   "bugs": {
     "url": "https://github.com/js2me/disposer-util/issues"
