--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "disposer-util",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "scripts": {
     "clean": "rimraf dist",
-    "prebuild": "npm run clean && eslint . --fix",
+    "check": "eslint . --fix",
+    
+    "prebuild": "npm run clean && npm run check",
     "build": "tsc",
     "postbuild": "node ./post-build.mjs",
     "prepub": "pnpm run build",
@@ -27,16 +29,9 @@
   "description": "",
   "devDependencies": {
     "@types/node": "20.14.5",
-    "@typescript-eslint/eslint-plugin": "7.13.1",
-    "@typescript-eslint/parser": "7.13.1",
     "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
     "exports-post-build-script": "github:js2me/exports-post-build-script",
-    "prettier": "3.3.2",
+    "js2me-eslint-config": "1.0.3",
     "typescript": "5.4.5"
   },
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
