--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "author": "js2me",
   "license": "MIT",
   "description": "",
+  "dependencies": {
+    "linked-abort-controller": "^1.0.4"
+  },
   "devDependencies": {
     "@types/node": "20.14.5",
     "eslint": "8.57.0",
